<resources>
    <string name="app_name">Eezee Rentals</string>
    <string name="success_message">Successfully booking completed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pick_address">331/C KIADB Industrial area Near Infosys Gate number 2 Hebbal Mysore 570018</string>
    <string name="terms_conditiins">I accept al the terms &amp; conditions of Ezeerentals.</string>
    <string name="symbol_and"> TO THE HILLS OF SATARA &amp;</string>
    <string name="welcome_eazy">Ezeerentals - A hassel free, simple bike rental company of Royal City,
        Mysore. We have a wide range of scooters and bikes available to rent and move on.
        We are authorized by RTO and we are the first company in Mysore to hold the rental
        boards on bike. Ezeerentals provides more option for visiotrs of Mysore to explore in and
        around places like</string>
    <string name="about_us1">Renting a Motorcycle (Bike and Scooter) in Mysore has always
        been a cumbersome process. We at EEZEE Rentals make sure that renting your favorite Bike or
        Scooter is as EEZEE as it gets.We specialize in Providing Bike and Scooter on Rent in Mysore.</string>
    <string name="about_us4">The youngest and the most enthusiastic member of our team. He is
        always up for challenges and makes sure he accomplishes them in style. A proud owner of Royal
        Enfield and Kawasaki, can be spotted in and around Mysore (Hint: A loud Akrapovic
        exhaust on his Z800).</string>
    <string name="about_us3">An Electronics engineer and a freelance journalist,
        his affection towards motorcycles is quite immense. He has been on biking expeditions all
        over India and also does solo bike trips to find his \‘Inner Peace\' (Just an excuse for not
        being there at the office). He seldom goes anywhere without his trusted Pulsar.</string>
    <string name="about_us2">We call him Chikki Mikki\' a slang for small mechanic. He is our go t
        o guy when it comes to fixing bikes, from Ducati\'s to Royal Enfield\'s, he knows them all
        like back of his hand. His passion for motorcycles started at a very young age (some say he
        rode bikes as a toddler, which is yet to be verified). A collector of vintage Motorcycles
        and Modern beauties.</string>
</resources>

