<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eazi.com.eazirentals.TermsConditions">
    <include layout="@layout/normal_header"
        android:id="@+id/header">
    </include>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/about_us1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/keerthi"
                    android:scaleType="fitXY"
                    android:layout_height="wrap_content" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_centerHorizontal="true"
                        android:paddingRight="30dp"
                        android:paddingBottom="10dp"
                        android:gravity="end"
                        android:layout_marginRight="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/facebook"
                            android:id="@+id/keerti_fb"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content" />
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/youtube"
                            android:id="@+id/youtube"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/keerti_fb"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="KEERTHI EKAMBARAM"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Co-Founder"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/about_us3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/bijesh"
                    android:scaleType="fitXY"
                    android:layout_height="wrap_content" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_centerHorizontal="true"
                        android:gravity="end"
                        android:paddingRight="20dp"
                        android:id="@+id/bijesh_fb"
                        android:paddingBottom="10dp"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="BIJESH KARAKAT"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Co-Founder"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/about_us2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/champak"
                    android:scaleType="fitXY"
                    android:layout_height="wrap_content" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_centerHorizontal="true"
                        android:gravity="end"
                        android:paddingBottom="10dp"
                        android:paddingRight="20dp"
                        android:id="@+id/champak_fb"
                        android:layout_alignParentBottom="true"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:src="@drawable/facebook"
                            android:layout_gravity="center_horizontal"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="CHAMPAK K PAL"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Co-Founder"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/about_us4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
